force-app/main/default/objects/Student_Info__c/Student_Info__c.object-meta.xml
<CustomObject>
    <label>Student Info</label>
    <nameField>
        <label>Student Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>students info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>