force-app/main/default/objects/Student_Info__c/fields/Percentage_in_secondary_Class__c.field-meta.xml
<CustomField>
    <fullName>Percentage_in_secondary_Class__c</fullName>
    <label>Percentage in secondary Class</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>