force-app/main/default/objects/Student_Info__c/validationRules/Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Category</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Text( Category__c ))</errorConditionFormula>
    <errorMessage>Please select category.</errorMessage>
</ValidationRule>