force-app/main/default/objects/Student_Info__c/validationRules/Date_Of_Birth.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Of_Birth</fullName>
    <active>true</active>
    <errorConditionFormula>(( TODAY() -  Date_Of_Birth__c ) / 365.2425) &gt;10</errorConditionFormula>
    <errorMessage>Age must be below 10 years.</errorMessage>
</ValidationRule>