force-app/main/default/objects/Student_Info__c/validationRules/Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( Emails__c ,   Name__c  )</errorConditionFormula>
    <errorMessage>Email must contains username.</errorMessage>
</ValidationRule>