force-app/main/default/objects/Student_Info__c/validationRules/Father_name_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Father_name_validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Father_Name__c )</errorConditionFormula>
    <errorMessage>Please Enter father name</errorMessage>
</ValidationRule>