force-app/main/default/objects/Student_Info__c/validationRules/Gender_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Gender_validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT( Gender__c ))</errorConditionFormula>
    <errorMessage>Please choose gender.</errorMessage>
</ValidationRule>