force-app/main/default/objects/Student_Info__c/validationRules/Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Name__c )&lt;6</errorConditionFormula>
    <errorMessage>Name Length Must be 6 character</errorMessage>
</ValidationRule>