force-app/main/default/objects/Student_Info__c/validationRules/Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(ISBLANK( Phone_Number__c )),
NOT(REGEX( Phone_Number__c ,&quot;[+91]{3}[1-9]{1}[0-9]{9}&quot;))
)</errorConditionFormula>
    <errorMessage>Please entered Phone number in correct format.(eg:+91 1234567890)</errorMessage>
</ValidationRule>